[gd_scene load_steps=15 format=2]

[ext_resource path="res://resources/fonts/app_interface.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/container2.png" type="Texture" id=2]
[ext_resource path="res://assets/button000.png" type="Texture" id=3]
[ext_resource path="res://assets/button001.png" type="Texture" id=4]
[ext_resource path="res://resources/fonts/static/OpenSans/OpenSans-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://objects/app_interface.gd" type="Script" id=6]
[ext_resource path="res://assets/Square Buttons/Square Buttons/On Off Square Button.png" type="Texture" id=7]
[ext_resource path="res://assets/Square Buttons/Square Buttons/Settings Square Button.png" type="Texture" id=8]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 0.0352941, 0.360784, 0.235294, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 1
extra_spacing_space = 4
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.278431, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0588235, 0.580392, 0.360784, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 256 )

[node name="interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.047
margin_bottom = 0.219997

[node name="TextureRect" type="Sprite" parent="Control"]
visible = false
position = Vector2( 26, 24.5 )
scale = Vector2( 0.24, 0.235 )
z_index = -1
texture = ExtResource( 8 )

[node name="TextureRect" type="Sprite" parent="."]
position = Vector2( 180, 377.5 )
scale = Vector2( 0.229492, 843 )
z_index = -2
texture = SubResource( 6 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_top = 0.047
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.219997
margin_bottom = -3.0
custom_fonts/font = SubResource( 1 )
custom_styles/tab_fg = SubResource( 2 )
custom_styles/tab_disabled = SubResource( 3 )
custom_styles/tab_bg = SubResource( 3 )
custom_styles/panel = SubResource( 4 )

[node name="1-axis" type="HBoxContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 36.0
custom_constants/separation = 15

[node name="boven" type="TouchScreenButton" parent="TabContainer/1-axis"]
position = Vector2( 40, 30 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
passby_press = true
action = "druk"

[node name="Label" type="Label" parent="TabContainer/1-axis/boven"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "boven"
align = 1
valign = 1

[node name="origin" type="TouchScreenButton" parent="TabContainer/1-axis"]
position = Vector2( 40, 130 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
passby_press = true
action = "druk"

[node name="Label" type="Label" parent="TabContainer/1-axis/origin"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "origin"
align = 1
valign = 1

[node name="beneden" type="TouchScreenButton" parent="TabContainer/1-axis"]
position = Vector2( 40, 230 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
passby_press = true
action = "druk"

[node name="Label" type="Label" parent="TabContainer/1-axis/beneden"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "beneden"
align = 1
valign = 1

[node name="power" type="TouchScreenButton" parent="TabContainer/1-axis"]
self_modulate = Color( 0.356863, 0.0627451, 0.0313726, 0.843137 )
position = Vector2( 80, 330 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )
passby_press = true
action = "druk"

[node name="Label" type="Label" parent="TabContainer/1-axis/power"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
text = "off"
align = 1
valign = 1

[connection signal="pressed" from="TabContainer/1-axis/boven" to="." method="_on_boven_pressed"]
[connection signal="pressed" from="TabContainer/1-axis/origin" to="." method="_on_origin_pressed"]
[connection signal="pressed" from="TabContainer/1-axis/beneden" to="." method="_on_beneden_pressed"]
[connection signal="pressed" from="TabContainer/1-axis/power" to="." method="_on_power_pressed"]
